--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   test:
-    environment: testing
+    environment: testing   # this environment is use only for creting secretes for a required section
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.kbhjwv0.mongodb.net
       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
